ordering: Added ordering/sorting into MyGames w/ a reset btn

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -167,6 +167,10 @@ p#no-my-mf-scores-yet {
   z-index: 2; 
 }
 
+.reset-sort-btn {
+  color: white;
+}
+
 .sorting-arrows {
   padding: 0.16rem;
 }
