--- a/templates/games/my-games.html
+++ b/templates/games/my-games.html
@@ -19,8 +19,9 @@
     <div id="my-ah-sorting-controls" class="sorting-controls mb-2">
       <a id="my-ah-reset-sort-btn" 
         href="?ah_order=-final_score&mf_page={{ my_ah_scores.number }}&mf_page={{ my_mf_scores.number }}" 
-        class="reset-sort-btn btn btn-primary btn-sm">
-          Reset Sort Order<span class="sorting-arrows">&olarr;</span></a> 
+        class="reset-sort-btn btn btn-primary btn-sm" 
+        alt="Reset the sort order of My Games Anagram Hunt table">Reset Sort order
+        <span class="sorting-arrows">&olarr;</span></a> 
     </div>
 
     <div id="my-ah-scrollable-table" class="mb-3">
@@ -129,8 +130,9 @@
     <div id="my-mf-sorting-controls" class="sorting-controls mb-2">
       <a id="my-mf-reset-sort-btn" 
         href="?mf_order=-final_score&mf_page={{ my_mf_scores.number }}&ah_page={{ my_ah_scores.number }}" 
-        class="reset-sort-btn btn btn-primary btn-sm">
-          Reset Sort Order<span class="sorting-arrows">&olarr;</span></a> 
+        class="reset-sort-btn btn btn-primary btn-sm" 
+        alt="Reset the sort order of My Games Math Facts table">Reset Sort Order
+        <span class="sorting-arrows">&olarr;</span></a> 
     </div>
     
     <div id="my-mf-scrollable-table" class="mb-3">
