--- a/templates/games/ah-leaderboard.html
+++ b/templates/games/ah-leaderboard.html
@@ -8,6 +8,14 @@
 <div id="ah-leaderboard-container" class="container-fluid mx-auto mt-0 mb-5 p-3">
   <h2 id="ah-leaderboard-heading" class="mx-auto my-3 text-center">Anagram Hunt Leaderboard</h2>
 
+    <div id="ah-leaderboard-sorting-controls" class="sorting-controls mb-2">
+      <a id="ah-leaderboard-reset-sort-btn" 
+        href="?order=-final_score" 
+        class="reset-sort-btn btn btn-primary btn-sm" 
+        alt="Reset the sort order of Anagram Hunt's Leaderboard">Reset Sort order
+        <span class="sorting-arrows">&olarr;</span></a> 
+    </div>
+
     {% if anagram_scores %}
       <table id="ah-leaderboard-tbl" class="table table-striped table-hover mx-auto my-2">
         <thead class="table-primary">
