ordering: Default order by rank, instead of final score, and better cols in tbls for Math Facts settings

--- a/templates/games/ah-leaderboard.html
+++ b/templates/games/ah-leaderboard.html
@@ -10,7 +10,7 @@
 
     <div id="ah-leaderboard-sorting-controls" class="sorting-controls mb-2">
       <a id="ah-leaderboard-reset-sort-btn" 
-        href="?order=-final_score" 
+        href="?order=rank" 
         class="reset-sort-btn btn btn-primary btn-sm" 
         alt="Reset the sort order of Anagram Hunt's Leaderboard">Reset Sort order
         <span class="sorting-arrows">&olarr;</span></a> 
