--- a/templates/games/my-games.html
+++ b/templates/games/my-games.html
@@ -239,5 +239,6 @@
 
   {% block scripts %}
     <script src="{% static 'js/toggleVisibility.js' %}"></script>
+    <script src="{% static 'js/preserveScroll.js' %}"></script>
   {% endblock %}
 {% endblock %} <!-- END main -->
