--- a/templates/games/mf-leaderboard.html
+++ b/templates/games/mf-leaderboard.html
@@ -1,5 +1,7 @@
 {% extends "_base.html" %}
 
+{% load static %}
+
 {% block title %}
   Math Facts Leaderboard
 {% endblock %}
@@ -81,6 +83,9 @@
     {% endif %}
 
   {% include 'includes/pagination.html' %}
-
 </div>
+
+  {% block scripts %}
+    <script src="{% static 'js/preserveScroll.js' %}"></script>
+  {% endblock %}
 {% endblock %}  <!-- END main -->
