--- a/static/css/main.css
+++ b/static/css/main.css
@@ -174,6 +174,11 @@ p#no-my-mf-scores-yet {
 .sorting-arrows {
   padding: 0.16rem;
 }
+
+.player-avatar {
+  width: 1.12rem; /* ~20px */
+  height: 1.12rem;
+}
 /* End Leaderboards TABLE styles */
 
 
