msgs: Added Django msgs to AnagramHunt

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -267,6 +267,7 @@ p#no-my-mf-scores-yet {
   font-size: .81rem;
 }
 
+#ah-login-score-link,
 #mf-login-score-link {
   color: white;
   font-size: .85rem;
