--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,6 +14,10 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
     crossorigin="anonymous" />
   <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+  <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
 
   <script defer src="http://localhost:8080/js/chunk-vendors.js"></script>
   <script defer src="http://localhost:8080/js/app.js"></script>
